<resources>
    <string name="app_version">0.0.1</string>
    <string name="app_name">잊혀질 권리</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="retry">재시도</string>
    <string name="close">닫기</string>
    <string name="setting">설정</string>
    <string name="analysis">분석</string>
    <string name="analysis_start">사이트 분석 수행</string>
    <string name="site_analysis">사이트 분석</string>
    <string name="upload">영상 업로드</string>
    <string name="analysis_result">분석 결과</string>
    <string name="analysis_result_check">분석 결과 확인</string>
    <string name="next_site_button">다음 페이지 분석</string>
    <string name="management">관리</string>
    <string name="permission">퍼미션 허가 완료</string>
    <string name="next_site_analysis">다음 사이트 분석</string>
    <string name="video_extract">영상 추출</string>
    <string name="video_extract_message">영상에서 이미지를 추출하고 있습니다..</string>
    <string name="site_url_checker_title">분석 사이트 선택\n(사이트 목록은 계속 업데이트 됩니다)</string>
    <string name="analysis_result_img">분석 결과 이미지</string>
    <string name="upload_img_frame">업로드 영상 이미지 프레임</string>
    <string name="site_thumbnail">사이트 썸네일</string>
    <string name="algo_prop">예상 정확도</string>
    <string name="analysis_img">분석 이미지</string>

    <string name="interval_list_default">Select Interval Time</string>
    <string name="noti_text">영상 업로드 후 \n \n 영상 분석을 진행해 주세요</string>
    <string name="video_analize">영상\n분석</string>
    <string name="user_info">정보\n관리</string>
    <string name="send_email">삭제 요청 이메일 전송</string>
    <string name="show_image">결과 \n 보기</string>
    <string-array name="intervalLists">
        <item>Select Interval Time</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>10</item>
    </string-array>

    <string name="network_check_title">네트워크 연결 상태 확인</string>
    <string name="network_check_message">네트워크 연결(LTE, WI-FI)을 확인 하세요</string>
    <string name="pref_select_url">selectUrl</string>
    <string name="pref_select_url_title">분석 사이트</string>
    <string name="pref_select_url_summary">분석할 사이트를 선택할 수 있습니다</string>
    <string name="pref_whole_key">wholeSite</string>
    <string name="pref_whole_key_title">모든 페이지 검사</string>
    <string name="pref_donate_key">donate</string>
    <string name="pref_donate_key_title">기부하기</string>
    <string name="pref_donate_key_summary">잊혀질 권리 발전에 기여해 주세요</string>
    <string name="pref_company_key">company</string>
    <string name="pref_company_key_title">회사소개</string>
    <string name="pref_company_key_summary">에스프레스토(주)</string>
    <string name="pref_app_version">version</string>
    <string name="pref_app_version_title">앱 버전</string>

    <string name="user_info_similarity">유사도</string>
    <string name="user_info_url">URL</string>
    <string name="user_info_video_title">영상 제목</string>
    <string name="user_info_is_delete">삭제 여부</string>
    <string name="user_info_resend">재전송</string>
    <string name="email_history_nothing">이메일 전송 내역이 없습니다</string>

    <string name="whole_summary">모든 페이지의 썸네일을 검사합니다\n매우 오랜 시간이 소요됩니다</string>


    <string name="donate_dialog_title">기부하기</string>
    <string name="donate_dialog_message">
        디지털 성범죄는 피해자의 모든것을 파괴시키는 행위입니다\n
        현재까지도 많은 피해자들이 정신적, 금전적으로 고통 받고있습니다\n\n
        에스프레스토(주)는 디지털 성범죄가 완전히 없어질 그 날과\n
        피해자들의 잊혀질 권리를 위해 약하지만 따스한 불 빛이 되어 함께하겠습니다\n\n
        소중한 여러분의 기부로 기술적으로 만족도가 높은 앱이 될 것을 약속 드립니다\n\n
        기부계좌: 1006-001-447932(우리은행), 예금주: 에스프레스토(주)
    </string>
    <string name="company_dialog_title">회사소개</string>
    <string name="company_dialog_message">
        에스프레스토(주)는 영상 및 데이터 분석 분야 최고의 전문가들이 모인 스타트업 입니다\n기술문의 및 서비스 제휴 등은 아래주소로 연락바랍니다\n\n홈페이지: www.spresto.net\n이메일: dev@spresto.net
    </string>

    <string-array name="site_key">
        <item>https://www.pornhub.com</item>
        <item>https://www.yazaral1.com</item>
        <!--<item>https://mingkyaa.com</item>-->
    </string-array>
    
    <string-array name="site_detail">
        <item>https://www.pornhub.com/video?c=103&amp;page=1</item>
        <item>https://www.yazaral1.com/bbs/board.php?bo_table=korea_video</item>
        <!--<item>https://mingkyaa.com/list.php?cate=fhd5</item>-->
    </string-array>



    <string name="new_upload_text"></string>
    <string name="new_upload_text_2">업로드 영상은 앱내부에서만 사용 되며\n\n별도의 서버로 전송되지 않습니다</string>

    <!-- & : &amp;-->
    <!-- < : &lt;-->
    <!-- > : &gt;-->
    <!-- ' : &apos;-->
    <!-- " : &quot;-->
    <string name="send_email_format">해당 URL의 영상은 유출된 영상임을 알립니다.\n\n 유출된 영상의 당사자로 하여금 sPresto Co.,Ltd 이름으로 삭제 요청을 드립니다.\n\n &lt; 삭제요청 근거 &gt; \n 정보통신망법 제44조의 2 제 1항 의거</string>
    <string name="send_email_format_english">
        Delete Request. Title: Perfect Asian Tits, URL: dev@spresto.net
        Under Korean law(PERSONAL INFORMATION PROTECTION ACT), we force you to delete and not to distribute the above contents.
        A legal basis: Article 44
        (1) A data subject who intends to request a personal information controller to suspend the processing of his/her own personal information pursuant to Article 37 (1) of the Act shall sumbmit a request in the manner and following the procedure determined by the personal information controller.
        (2)A personal information controller shall inform the reievant data subject of the fact that it has duly suspended the processing of personal information persuant to the main sentence of Article 38 (2) of the Act within ten days from the receipt of a request to suspend the processing of personal information.
    </string>
    <string name="send_email_url">http://13.125.176.24:5000/email/</string>

</resources>
