<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/pref_select_url"
        android:title="@string/pref_select_url_title"
        android:summary="@string/pref_select_url_summary"/>
    <CheckBoxPreference
        android:key="@string/pref_whole_key"
        android:title="@string/pref_whole_key_title"
        android:summary="@string/whole_summary"/>
    <Preference
        android:key="@string/pref_donate_key"
        android:title="@string/pref_donate_key_title"
        android:summary="@string/pref_donate_key_summary"/>

    <Preference
        android:key="@string/pref_company_key"
        android:title="@string/pref_company_key_title"
        android:summary="@string/pref_company_key_summary"/>

    <Preference
        android:key="@string/pref_app_version"
        android:title="@string/pref_app_version_title"
        android:summary="@string/app_version"/>
</PreferenceScreen>