<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/frag_guideLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_weight="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:text="@string/user_info_similarity"
                android:textColor="@color/black"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:ellipsize="end"
                android:text="@string/user_info_url"
                android:textColor="@color/black"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/user_info_video_title"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_weight="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_info_is_delete"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_weight="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_info_resend"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/frag_infoListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frag_guideLayout"></ListView>

    <ProgressBar
        android:id="@+id/frag_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/frag_noPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_history_nothing"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:visibility="gone"/>
</RelativeLayout>