<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/video_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape"
            android:ellipsize="end"
            android:padding="15dp"
            android:singleLine="true"
            android:text="비디오를 업로드 해주세요..."
            android:textColor="@color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/video_anal_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/video_name"
            android:background="@drawable/buttonshape"
            android:text="업로드"
            android:textSize="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/guideLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/startLayout"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="순위"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="유사도"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="URL"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="영상 제목"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/show_image"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/send_email"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lastLayout"
        android:layout_below="@+id/guideLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <ProgressBar
            android:id="@+id/bitmapBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/middleNoti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/noti_text"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:visibility="visible" />

        <ListView
            android:id="@+id/middleListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"></ListView>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lastLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/analizeButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/buttonshape"
                android:padding="5dp"
                android:text="@string/video_analize"
                android:textSize="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/userinfoButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/buttonshape"
                android:padding="5dp"
                android:text="@string/user_info"
                android:textSize="20dp" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>