<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/galleryBg">

        <LinearLayout
            android:id="@+id/item_img_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:text="@string/algo_prop"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:text="@string/analysis_img"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_img_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_img_layout_title"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/origin_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/circle_percent"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_margin="5dp"/>
            <ImageView
                android:id="@+id/site_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="0.5"
                android:layout_margin="5dp"/>
        </LinearLayout>



        <RelativeLayout
            android:id="@+id/id_mid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_img_layout"
            android:layout_margin="5dp">
            <!--<TextView-->
                <!--android:id="@+id/com_percent"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/white"-->
                <!--android:maxLines="1"-->
                <!--android:ellipsize="end"/>-->

            <TextView
                android:id="@+id/com_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/com_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_below="@+id/com_title"
                android:layout_marginTop="3dp"
                android:maxLines="1"
                android:ellipsize="end"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_mid_layout"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/sendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/upload_button_shape"
                android:text="@string/send_email"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/audioAnalysisButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sendEmail"
                android:background="@drawable/audio_analysis_button"
                android:layout_marginTop="5dp"
                android:text="오디오 분석 수행"
                android:textColor="@color/black"
                android:textSize="17dp"/>

            <Button
                android:id="@+id/tensorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/audioAnalysisButton"
                android:background="@drawable/audio_analysis_button"
                android:layout_marginTop="5dp"
                android:text="TensorFlow"
                android:textColor="@color/black"
                android:textSize="17dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_mid_layout"
            android:layout_margin="5dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_color"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="전송 완료"
                android:textSize="18dp" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>